--- a/Integrations/BaeOpenAiIntegration/BaeOpenAiIntegration.csproj
+++ b/Integrations/BaeOpenAiIntegration/BaeOpenAiIntegration.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\BeaIntegrations\BaeIntegrations.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Service/" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
