--- a/BaeServer/BaeServer.csproj
+++ b/BaeServer/BaeServer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
+    <PackageReference Include="MongoDB.EntityFrameworkCore" Version="7.0.0-preview.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
@@ -15,6 +16,7 @@
     <ProjectReference Include="..\BaeAiSystem\BaeAiSystem.csproj" />
     <ProjectReference Include="..\Integrations\BaeOpenAiIntegration\BaeOpenAiIntegration.csproj" />
     <ProjectReference Include="..\BeaIntegrations\BaeIntegrations.csproj" />
+    <ProjectReference Include="..\BaeDB\BaeDB.csproj" />
   </ItemGroup>
 
 </Project>
