--- a/BaeServer/BaeServer.csproj
+++ b/BaeServer/BaeServer.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="7.0.14" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.14" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
     <PackageReference Include="MongoDB.EntityFrameworkCore" Version="7.0.0-preview.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
@@ -17,6 +20,7 @@
     <ProjectReference Include="..\Integrations\BaeOpenAiIntegration\BaeOpenAiIntegration.csproj" />
     <ProjectReference Include="..\BeaIntegrations\BaeIntegrations.csproj" />
     <ProjectReference Include="..\BaeDB\BaeDB.csproj" />
+    <ProjectReference Include="..\BaeAuthentication\BaeAuthentication.csproj" />
   </ItemGroup>
 
 </Project>
